--- a/server/views/detail.liquid
+++ b/server/views/detail.liquid
@@ -1,6 +1,9 @@
 {% layout "server/layouts/base.liquid" %}
 
 {% block content %}
-<h1 class="h1">{{ item.name }}</h1>
-<img src="{{ item.image.src }}" alt="{{ item.image.alt }}" width="{{ item.image.width }}" height="{{ item.image.height }}" />
+    <div class="paper">
+        <h1 class="h1">{{ monster.name }}</h1>
+        <img src="{{image}}" alt="" />
+        <p>Damage type: {{monster.Damage}}</p>
+    </div>
 {% endblock %}
