--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -17,8 +17,42 @@
 </head>
 
 <body>
-  <header>
-    Deze header staat op elke pagina
+  <script>
+    function runAnimation() {
+      document.getElementById("monster").animate(
+        [
+          { transform: "rotate(-45deg)"},
+          { transform: "rotate(45deg)"},
+        ],
+        {
+          duration: 200,
+          iterations: 10,
+          direction: "alternate",    
+        },
+      );
+    }
+
+    function loopWithRandomDelay() {
+      console.log("hello world");
+        runAnimation();
+
+        const randomDelay = Math.random() * 3000 + 1000; // between 1s and 4s
+        setTimeout(loopWithRandomDelay, randomDelay);
+    }
+
+    loopWithRandomDelay();
+  </script>
+  <header class="paper">
+    <nav>
+      <ul class="navbar">
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/combat">Combat</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main>
     {% block content %}{% endblock %}
