--- a/server/views/index.css
+++ b/server/views/index.css
@@ -21,5 +21,23 @@ li{
 div{
   padding: 1rem;
   width: 300px;
+}
 
+.battle{
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+
+  .paper{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    h1{
+      text-align: center;
+    }
+  
+    img{
+      margin: auto;
+    }
+  }
 }
