--- a/server/views/combat.liquid
+++ b/server/views/combat.liquid
@@ -2,28 +2,34 @@
 
 {% block content %}
 
-<h1 class="h1">{{ title }}</h1>
-<h1>{{ bob }}</h1>
+<div class="quiz">
+  <div class="options">
+    <div class="Damage">
+      <button class="paper">Fire</button>
+      <button class="paper">Water</button>
+      <button class="paper">Thunder</button>
+      <button class="paper">Ice</button>
+      <button class="paper">Dragon</button>
+      <button class="paper">None</button>
+    </div>
 
+    <div class="ailment">
+      <button class="paper">Poison</button>
+      <button class="paper">Sleep</button>
+      <button class="paper">Paralysis</button>
+      <button class="paper">Blast</button>
+      <button class="paper">Stun</button>
+      <button class="paper">None</button>
+    </div>
+  </div>
 
- <div class="battle">
   {% comment %} Monster 1 {% endcomment %}
   <div class="paper combat">
-    <h1 class="h1">{{ monsters.id }}</h1>
     <h1 class="h1">{{ monsters.name }}</h1>
     <img src="{{image}}" alt="" />
-    <p>Damage type: {{ monsters.elements }}</p>
-    <p>Damage type: {{ monsters.elements }}</p>
+    <p>{{ monsters.type }}</p>
+    <p>{{ monsters.species }}</p>
+    <p>{{ monsters.description }}</p>
   </div>
-  
-  {% comment %} Monster 2 {% endcomment %}
-  <div class="paper combat">
-    <h1 class="h1">{{ monsters.name }}</h1>
-    <img src="{{image}}" alt="" />
-    <p>Damage type: {{ monsters.elements }}</p>
-    <p>Damage type: {{ monsters.elements }}</p>
-  </div>
- </div>
-
-
+</div>
 {% endblock %}
