--- a/server/views/index.css
+++ b/server/views/index.css
@@ -9,7 +9,7 @@ img{
 }
 
 li{
-  width: 130px;
+  width: 120px;
   padding: 1em;
 
   img{
@@ -40,4 +40,81 @@ div{
       margin: auto;
     }
   }
+}
+
+.description{
+  position: relative;
+  padding: 1em;
+  background-color: var(--light-paper);
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.description:before, .description:after {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  left: 0;
+  -webkit-clip-path: polygon(1% 0%, 4% 100%, 9% 0%, 13% 100%, 19% 1%, 21% 100%, 26% 5%, 30% 100%, 36% 2%, 43% 100%, 50% 1%, 52% 100%, 61% 0%, 69% 94%, 70% 0%, 76% 100%, 81% 0%, 84% 100%, 91% 0%, 97% 100%, 99% 3%);
+}
+
+.description:before {
+  background-color:  var(--paper-col);
+  top: -1;
+}
+
+.description:after {
+  background-color: var(--light-paper);
+  bottom: -2px;
+}
+
+#monster{
+  margin-bottom: 10px;
+}
+
+.weak{
+  position: relative;
+  background-color: var(--background-2);
+  margin: auto;
+  margin-bottom: 10px;
+  width: fit-content;
+  height: fit-content;
+
+}
+
+.weak:before, .weak:after {
+  content: '';
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  left: 0;
+  -webkit-clip-path: polygon(1% 0%, 4% 100%, 9% 0%, 13% 100%, 19% 1%, 21% 100%, 26% 5%, 30% 100%, 36% 2%, 43% 100%, 50% 1%, 52% 100%, 61% 0%, 69% 94%, 70% 0%, 76% 100%, 81% 0%, 84% 100%, 91% 0%, 97% 100%, 99% 3%);
+}
+
+.weak:before {
+  background-color:  var(--paper-col);
+  top: -1;
+}
+
+.weak:after {
+  background-color: var(--background-2);
+  bottom: -2px;
+}
+
+.container{
+  display: grid;
+  grid-template-columns: repeat(2, 250px);
+  grid-template-rows: repeat(3, minmax(150px, auto));
+}
+
+.element{
+  margin-bottom: 10px;
+}
+
+a{
+  text-align: center;
+  color: black;
+  text-decoration: none;
 }
