--- a/server/views/index.css
+++ b/server/views/index.css
@@ -104,9 +104,7 @@ div{
 }
 
 .container{
-  display: grid;
-  grid-template-columns: repeat(2, 250px);
-  grid-template-rows: repeat(3, minmax(150px, auto));
+  width: max-content;
 }
 
 .element{
