--- a/server/layouts/base.css
+++ b/server/layouts/base.css
@@ -12,6 +12,7 @@
 header {
   padding: 1rem;
   height: 50px;
+  width: auto;
 }
 
 footer {
@@ -30,10 +31,6 @@ body{
   padding: 1em;
   background-color: var(--paper-col);
   margin: auto;
-}
-
-div.paper{
-  width: 600px;
 }
 
 .paper:before, .paper:after {
