--- a/server/views/index.css
+++ b/server/views/index.css
@@ -23,24 +23,6 @@ div{
   width: 300px;
 }
 
-.battle{
-  display: flex;
-  width: 100%;
-  justify-content: space-evenly;
-
-  .paper{
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    h1{
-      text-align: center;
-    }
-  
-    img{
-      margin: auto;
-    }
-  }
-}
 
 .description{
   position: relative;
@@ -79,9 +61,8 @@ div{
   background-color: var(--background-2);
   margin: auto;
   margin-bottom: 10px;
-  width: fit-content;
-  height: fit-content;
-
+  width: auto;
+  text-align: center;
 }
 
 .weak:before, .weak:after {
@@ -104,7 +85,7 @@ div{
 }
 
 .container{
-  width: max-content;
+  width: auto;
 }
 
 .element{
@@ -115,4 +96,24 @@ a{
   text-align: center;
   color: black;
   text-decoration: none;
+}
+
+.page{
+  width: 600px;
+}
+
+@media screen and (max-width: 600px) {
+  .page {
+    width: auto;
+  }
+}
+
+h1{
+  text-align: center;
+}
+
+.wrapper{
+  width: auto;
+  display: flex;
+  justify-content: center;
 }
