--- a/server/views/detail.liquid
+++ b/server/views/detail.liquid
@@ -26,6 +26,7 @@
     }
 
     function scaryMonster() {
+        window.alert("You scared Him")
         window.location.href = "/";
         // const monster = document.getElementById("monster");
         // if (!monster) return;
