--- a/server/layouts/base.liquid
+++ b/server/layouts/base.liquid
@@ -21,6 +21,11 @@
             <p>Home</p>
           </li>
         </a>
+        <a href="/combat">
+          <li class="paper">
+            <p>Home</p>
+          </li>
+        </a>
       </ul>
     </nav>
   </header>
